--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "capstr-local-test",
+  "name": "web-server",
   "version": "1.0.0",
-  "description": "testing local / heroku connection",
+  "description": "Web server to display received packets",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2"
-  }
+    "express": "^4.17.1",
+    "dotenv": "^10.0.0",
+    "cors": "^2.8.5",
+    "jsonwebtoken": "^8.5.1"
+  },
+  "author": "Your Name",
+  "license": "ISC"
 }
